--- a/postgresql/DockerfileDBPosts
+++ b/postgresql/DockerfileDBPosts
@@ -1,9 +1,9 @@
-FROM postgres:13
+FROM postgres:latest
 
 ENV POSTGRES_USER user
 ENV POSTGRES_PASSWORD password
 ENV POSTGRES_DB k8training
 
-COPY init.sql /docker-entrypoint-initdb.d/
+COPY initPosts.sql /docker-entrypoint-initdb.d/
 
 EXPOSE 5432
