--- a/postgresql/DockerfileDBUsers
+++ b/postgresql/DockerfileDBUsers
@@ -4,6 +4,6 @@ ENV POSTGRES_USER user
 ENV POSTGRES_PASSWORD password
 ENV POSTGRES_DB k8training
 
-COPY initUsres.sql /docker-entrypoint-initdb.d/
+COPY initUsers.sql /docker-entrypoint-initdb.d/
 
 EXPOSE 5432
