--- a/post-service/src/main/resources/application.properties
+++ b/post-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
 
-management.endpoint.health.probes.enabled=true
-management.health.livenessState.enabled=true
-management.health.readinessState.enabled=true
+spring.sql.init.data-locations=classpath:schema.sql
+spring.sql.init.mode=always
