--- a/manifest/manifest_users-db.yml
+++ b/manifest/manifest_users-db.yml
@@ -1,38 +1,3 @@
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  namespace: k8s-program
-  name: users-db-persistent-volume
-  labels:
-    type: local
-    app: users-db
-spec:
-  claimRef:
-    namespace: k8s-program
-    name: users-db-persistent-volume-claim
-  storageClassName: manual
-  capacity:
-    storage: 1Gi
-  accessModes:
-    - ReadWriteMany
-  hostPath:
-    path: /run/desktop/mnt/host/c/temp/data_users
-
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  namespace: k8s-program
-  name: users-db-persistent-volume-claim
-spec:
-  storageClassName: manual
-  accessModes:
-    - ReadWriteMany
-  resources:
-    requests:
-      storage: 1Gi
-
----
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -66,10 +31,16 @@ spec:
           volumeMounts:
             - mountPath: "/var/lib/postgresql/data"
               name: users-storage
-      volumes:
-        - name: users-storage
-          persistentVolumeClaim:
-            claimName: users-db-persistent-volume-claim
+  volumeClaimTemplates:
+    - metadata:
+        name: users-storage
+      spec:
+        accessModes:
+          - ReadWriteOnce
+        storageClassName: hostpath
+        resources:
+          requests:
+            storage: 1Gi
 
 ---
 apiVersion: v1
