--- a/manifest/manifest_posts-service.yml
+++ b/manifest/manifest_posts-service.yml
@@ -21,18 +21,14 @@ spec:
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: docker
-            - name: DB_URL
+            - name: SPRING_DATASOURCE_URL
               value: jdbc:postgresql://posts-db:5432/postgres
-            - name: DB_USER
+            - name: SPRING_DATASOURCE_USERNAME
               value: postgres
-            - name: POSTGRES_PASSWORD
-              value: password
+            - name: SPRING_DATASOURCE_PASSWORD
+              value: postgres
             - name: USERS_URL
               value: http://users-service:8080
-          resources:
-            limits:
-              memory: 1Gi
-              cpu: "1"
 
 ---
 apiVersion: v1
