--- a/manifest/manifest_users-db.yml
+++ b/manifest/manifest_users-db.yml
@@ -19,13 +19,11 @@ spec:
           image: postgres:latest
           env:
             - name: POSTGRES_PASSWORD
-              value: password
+              value: postgres
             - name: POSTGRES_USER
               value: postgres
             - name: POSTGRES_DB
               value: postgres
-            - name: POSTGRES_HOST_AUTH_METHOD
-              value: trust
           ports:
             - containerPort: 5432
           volumeMounts:
