lesson3: Sub-task 1: Secrets and config-maps -Add Secrets object to your k8s manifest to store database username and password. -Add config maps to store environment variables for application deployments. -Add sql scripts to init databases (create tables) to config maps. -Change k8s Deployment and StatefulSet objects to load these secrets and config-maps.

--- a/manifest/manifest_posts-service.yml
+++ b/manifest/manifest_posts-service.yml
@@ -19,16 +19,26 @@ spec:
           ports:
             - containerPort: 8080
           env:
-            - name: SPRING_PROFILES_ACTIVE
-              value: docker
             - name: SPRING_DATASOURCE_URL
-              value: jdbc:postgresql://posts-db:5432/postgres
+              valueFrom:
+                configMapKeyRef:
+                  name: k8s-config
+                  key: POSTS_DB_URL
             - name: SPRING_DATASOURCE_USERNAME
-              value: postgres
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-secret
+                  key: POSTGRES_USER
             - name: SPRING_DATASOURCE_PASSWORD
-              value: postgres
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-secret
+                  key: POSTGRES_PASSWORD
             - name: USERS_URL
-              value: http://users-service:8080
+              valueFrom:
+                configMapKeyRef:
+                  name: k8s-config
+                  key: USERS_URL
 
 ---
 apiVersion: v1
