--- a/manifest/manifest_posts-db.yml
+++ b/manifest/manifest_posts-db.yml
@@ -19,16 +19,34 @@ spec:
           image: postgres:latest
           env:
             - name: POSTGRES_PASSWORD
-              value: postgres
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-secret
+                  key: POSTGRES_PASSWORD
             - name: POSTGRES_USER
-              value: postgres
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-secret
+                  key: POSTGRES_USER
             - name: POSTGRES_DB
-              value: postgres
+              valueFrom:
+                configMapKeyRef:
+                  name: k8s-config
+                  key: POSTGRES_DB
           ports:
             - containerPort: 5432
           volumeMounts:
-            - mountPath: "/var/lib/postgresql/data"
-              name: posts-storage
+            - name: posts-storage
+              mountPath: "/var/lib/postgresql/data"
+            - name: posts-init
+              mountPath: /docker-entrypoint-initdb.d
+      volumes:
+        - name: posts-init
+          configMap:
+            name: k8s-config
+            items:
+              - key: POSTS_SCHEMA_SQL
+                path: "posts-schema.sql"
   volumeClaimTemplates:
     - metadata:
         name: posts-storage
