lesson3: Sub-task 2: Liveness and Readiness probes
Add endpoints for health checks at your applications.
Add startup, liveness and readiness probes for your Deployment objects at k8s manifest.
Add startup, liveness and readiness probes for your StatefulSet objects at k8s manifest.

--- a/manifest/manifest_posts-db.yml
+++ b/manifest/manifest_posts-db.yml
@@ -17,6 +17,24 @@ spec:
       containers:
         - name: posts-db
           image: postgres:latest
+          readinessProbe:
+            exec:
+              command:
+                - bash
+                - "-c"
+                - "pg_isready -U$POSTGRES_USER"
+          livenessProbe:
+            exec:
+              command:
+                - bash
+                - "-c"
+                - "pg_isready -U$POSTGRES_USER"
+          startupProbe:
+            exec:
+              command:
+                - bash
+                - "-c"
+                - "pg_isready -U$POSTGRES_USER"
           env:
             - name: POSTGRES_PASSWORD
               valueFrom:
