--- a/helm.chart/templates/manifest_secret.yml
+++ b/helm.chart/templates/manifest_secret.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: postgres-secret
-  namespace: k8s-program
+  namespace: {{ .Values.namespace }}
 type: Opaque
 data:
   POSTGRES_PASSWORD: cGFzc3dvcmQ= #echo -n 'password' | base64
