--- a/helm.chart/templates/manifest_users-db.yml
+++ b/helm.chart/templates/manifest_users-db.yml
@@ -1,14 +1,14 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  namespace: k8s-program
+  namespace: {{ .Values.namespace }}
   name: users-db
 spec:
   selector:
     matchLabels:
       app: users-db
   serviceName: users-db
-  replicas: 1
+  replicas: {{ .Values.db.replicaCount }}
   template:
     metadata:
       labels:
@@ -80,7 +80,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: k8s-program
+  namespace: {{ .Values.namespace }}
   name: users-db
   labels:
     app: users-db
