--- a/helm.chart/templates/manifest_users-service.yml
+++ b/helm.chart/templates/manifest_users-service.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  namespace: k8s-program
+  namespace: {{ .Values.namespace }}
   name: users-persistent-volume
   labels:
     type: local
@@ -22,7 +22,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  namespace: k8s-program
+  namespace: {{ .Values.namespace }}
   name: users-persistent-volume-claim
 spec:
   storageClassName: manual
@@ -36,13 +36,13 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  namespace: k8s-program
+  namespace: {{ .Values.namespace }}
   name: users-service
 spec:
   selector:
     matchLabels:
       app: users-service-pod
-  replicas: 2
+  replicas: {{ .Values.service.replicaCount }}
   template:
     metadata:
       labels:
@@ -109,7 +109,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: k8s-program
+  namespace: {{ .Values.namespace }}
   name: users-service
 spec:
   type: NodePort
