--- a/helm.chart/templates/manifest_posts-service.yml
+++ b/helm.chart/templates/manifest_posts-service.yml
@@ -79,11 +79,10 @@ metadata:
   namespace: {{ .Values.namespace }}
   name: posts-service
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: posts-service-pod
   ports:
     - protocol: TCP
       port: 8080
       targetPort: 8080
-      nodePort: 30081
