--- a/helm.chart/templates/manifest_users-service.yml
+++ b/helm.chart/templates/manifest_users-service.yml
@@ -112,12 +112,10 @@ metadata:
   namespace: {{ .Values.namespace }}
   name: users-service
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: users-service-pod
   ports:
     - protocol: TCP
       port: 8080
       targetPort: 8080
-      nodePort: 30080
-
